# ChangeLog for catalyst
# Copyright 1999-2011 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  26 Jun 2011; Matt Turner <mattst88@gentoo.org>
  targets/support/chroot-functions.sh:
  Don't run 'distcc-config --install'

  25 Jun 2011; Sebastian Pipping <sping@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/support/chroot-functions.sh:
  Add "-news" to FEATURES everywhere

  25 Jun 2011; Raúl Porcel <armin76@gentoo.org> modules/catalyst/arch/sh.py:
  Add sh4aeb

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  targets/support/chroot-functions.sh:
  Use get_libdir instead of hard-coding lib for distcc

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: add multilib (and missing n64) classes

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: remove n32/n64 USE flags

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: create generic mips64 classes
  and inherit from them to simplify other classes

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: fix CFLAGS in loongson class

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: Remove ip* classes

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: Remove mips2 classes
  Linux doesn't even run on mips2

  24 Jun 2011; Sebastian Pipping <sping@gentoo.org> Makefile,
  doc/asciidoc.conf, doc/catalyst.1.txt, doc/make_subarch_table_guidexml.py:
  Include list of supported subarches in man page.

  14 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add gentoo-ilo option for the bootloader on ia64

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Replace virtual/portage with sys-apps/portage, bug #358847

  05 Feb 2011; Raúl Porcel <armin76@gentoo.org>